@@ -71,4 +71,9 @@ install  -m  755  -o  root  -g  root  $SCRIPT_DIRECTORY/firefox  \
 sedit "s/nspr/mozilla-nspr/" ${INSTALL_ROOT}/usr/lib/pkgconfig/firefox-nss.pc  &&
 sedit "s/nspr/mozilla-nspr/" ${INSTALL_ROOT}/usr/lib/pkgconfig/firefox-js.pc  &&
 sedit "s/nspr/mozilla-nspr/" ${INSTALL_ROOT}/usr/lib/pkgconfig/firefox-xpcom.pc &&
-sedit "s/nspr/mozilla-nspr/" ${INSTALL_ROOT}/usr/lib/pkgconfig/firefox-plugin.pc
+sedit "s/nspr/mozilla-nspr/" ${INSTALL_ROOT}/usr/lib/pkgconfig/firefox-plugin.pc &&
+
+# fix up permissions, firefox 2.0.0.8 installs stuff non-readable for
+# anyone but root
+chmod -R go+r /usr/lib/firefox  &&
+chmod go+x /usr/lib/firefox/run-mozilla.sh
