@@ -1,3 +1,11 @@
+2007-10-21 Arwed v. Merkatz <v.merkatz@gmx.net>
+	* INSTALL: fix up permissions after install so it runs as non-root
+
+2007-10-19 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.0.0.8, SECURITY_PATCH=12
+	  http://www.mozilla.org/projects/security/known-vulnerabilities.html#firefox2.0.0.8
+	* firefox-config.patch: updated to 2.0.0.8
+
 2007-09-24 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated to used UPSTREAM_KEY again
 	* firefox.gpg: Added new upstream key
